tweaks in: section, layout, etc..

--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -1,3 +1,7 @@
+{% comment %} 
+located in the ...myshopify.com/collections/all
+{% endcomment %}
+
 <div class="container">
   {% paginate collection.products by 4 %}
     <div class="row my-5">
