--- a/templates/list-collections.liquid
+++ b/templates/list-collections.liquid
@@ -1,3 +1,6 @@
+{% comment %} 
+located in the ...myshopify.com/collections
+{% endcomment %}
 <h1>hello from list-collection</h1>
 
 {% for collection in collections %}
