--- a/sections/article.liquid
+++ b/sections/article.liquid
@@ -16,11 +16,13 @@
 
 <div class="container my-5">
   <div class="row">
+
+    {% comment %} first column for the article body / comments / comments form {% endcomment %}
     {% comment %} article content {% endcomment %}
     <div class="col-12 col-md-8">
       <div>{{ article.content }}</div> 
 
-      {% comment %} comment section {% endcomment %}
+      {% comment %} comment section / comment check {% endcomment %}
       <div class="comment-section">
         {% if blog.comments_enabled? %}
           <h2>{{ number_of_comments }} comment{% if number_of_comments > 1 %}s{% endif %}</h2>
@@ -32,6 +34,7 @@
                 <div class="card-header">
                   {{ comment.author }} | {{ comment.created_at | date: format: 'long' }}
                 </div>
+                {% comment %} comment body {% endcomment %}
                 <div class="card-body">
                   <div>{{ comment.content }}</div>
                 </div>
@@ -41,7 +44,8 @@
             {% render 'paginate' paginate: paginate %}
           {% endpaginate %}
         
-          {% comment %} commecnt form {% endcomment %}
+
+          {% comment %} commecnt form / comment error {% endcomment %}
           <div>
             {% form 'new_comment', article %}
 
@@ -56,25 +60,114 @@
                 </div>
               {% endfor %}
 
-              <div class="form-floating">
-                <input type="text" name="comment[author]" id="CommentAuthor" placeholder="name" value="{{ form.author }}" autocapitalize="words">
-                <label for="CommentAuthor">name</label>
+
+              {% comment %} comment form {% endcomment %}
+              <div class="my-5 p-3 bg-light">
+                <h2>What are your thoughts?</h2>
+                <div class="form-floating my-3">
+                  <input class="form-control" type="text" name="comment[author]" id="CommentAuthor" placeholder="name" value="{{ form.author }}" autocapitalize="words">
+                  <label for="CommentAuthor">name</label>
+                </div>
+          
+                <div class="form-floating my-3">
+                  <input class="form-control" type="email" name="comment[email]" id="CommentEmail" placeholder="email" value="{{ form.email }}" autocorrect="off" autocapitalize="off">
+                  <label for="CommentEmail">email</label>
+                </div>
+                
+                <div class="form-floating my-3">
+                  <textarea class="form-control" name="comment[body]" id="CommentBody" placeholder="message" style="height: 150px">{{ form.body }}</textarea>
+                  <label for="CommentBody">message</label>
+                </div>
+          
+                <input class="btn btn-primary" type="submit" value="Post">
               </div>
-        
-              <label for="CommentEmail">email</label>
-              <input type="email" name="comment[email]" id="CommentEmail" placeholder="email" value="{{ form.email }}" autocorrect="off" autocapitalize="off">
-        
-              <label for="CommentBody">message</label>
-              <textarea name="comment[body]" id="CommentBody" placeholder="message">{{ form.body }}</textarea>
-        
-              <input type="submit" value="post">
             {% endform %}
           </div>
+
         {% endif %}
       </div>
     </div>
+
+    {% comment %} second column for the side bar {% endcomment %}
     <div class="col-12 col-md-4">
+
+      <div class="sidebar-section">
+        {% for block in section.blocks %}
+          {% assign item = block.settings %}
+
+          {% if block.type == 'image' %}
+            <div class="mb-4">
+               <p>{{ item.title }}</p>
+               <a href="{{ item.url }}">
+                <img src="{{ item.image | img_url: 'large' }}" alt="" class="w-100">
+              </a>
+            </div>
+          {% else %}
+            <div class="mb-4">
+              <p>{{ item.title }}</p>
+              <p>{{ item.description }}</p>
+            </div>
+          {% endif %}
+
+        {% endfor %}
+      </div>
+
+
+
+      {% schema %}
+        {
+          "name": "Sidebar",
+          "blocks": [
+            {
+              "name": "Sidebar Image",
+              "type": "image",
+              "settings": [
+                {
+                  "type": "text",
+                  "id": "title",
+                  "label": "Title",
+                  "default": "Sidebar Title"
+                },
+                {
+                  "type": "image_picker",
+                  "id": "image",
+                  "label": "Image"
+                },
+                {
+                  "type": "url",
+                  "id": "url",
+                  "label": "Link"
+                }
+              ]
+            },
+            {
+             "name": "Sidebar Text",
+             "type": "text",
+             "settings": [
+                {
+                  "type": "text",
+                  "id": "title",
+                  "label": "Title",
+                  "default": "Sidebar Title"
+                },
+                {
+                  "type": "richtext",
+                  "id": "description",
+                  "label": "Description"
+                }
+             ]
+            }
+          ]
+        }
+      {% endschema %}
+
     </div>
   </div>
 </div>
+
+{% style %}
+  .btn {
+    min-width: 15%;
+  }
+{% endstyle %}
 
