--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -1,6 +1,6 @@
 <section class="inner-hero-section text-center">
   {% if section.settings.image != blank %}
-    <img src="{{ section.settings.image | img_url: 'master' }}" alt="">
+    <img src="{{ section.settings.image | img_url: 'master' }}" alt="{{ section.settings.image.alt}}">
   {% else %}
     {% capture current %}{% cycle 1,2 %}{% endcapture %}
     {% comment %} this is a placeholder image {% endcomment %}
