--- a/templates/search.liquid
+++ b/templates/search.liquid
@@ -1,22 +1,103 @@
 {% paginate search.results by 10 %}
-  <form action="/search" method="get" role="search">
-    <input type="search" name="q" value="{{ search.terms | escape }}">
-    <button type="submit">search</button>
-  </form>
+  <div class="container my-5">
 
-  {% if search.performed %}
-    {% for item in search.results %}
-      {% if item.featured_image %}
-        <a href="{{ item.url | within: collection }}" title="{{ item.title | escape }}">
-          {{ item.featured_image.src | img_url: 'medium' | img_tag: item.featured_image.alt }}
-        </a>
+    {% comment %} search input field {% endcomment %}
+    <div class="row">
+      <form action="/search" method="get" role="search">
+        <input class="form-control mb-4 form-control-lg" type="search" name="q" value="{{ search.terms | escape }}">
+
+        {% comment %} search by category {% endcomment %}
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="product_type" name="type" value="product">
+          <label class="form-check-label" for="product_type">Product</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="product_type" name="type" value="article">
+          <label class="form-check-label" for="product_type">Article</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="checkbox" id="product_type" name="type" value="page">
+          <label class="form-check-label" for="product_type">Page</label>
+        </div>
+
+        <button class="btn btn-primary" type="submit">Search</button>
+      </form>
+    </div>
+
+    {% comment %} show number of search results {% endcomment %}
+    <div class="row">
+      {% if search.results_count == 0 %}
+        <h1 class="text-center">No result</h1>
+      {% else %}
+        <h1 class="text-center">{{ search.results_count }} search result{% if search.results_count > 1 %}s{% endif %}</h1>
       {% endif %}
-      <h5>{{ item.title | link_to: item.url }}</h5>
-      <p>{{ item.content | strip_html | truncatewords: 50 }}</p>
-    {% else %}
-      no results
-    {% endfor %}
-  {% endif %}
+    </div>
 
-  {% if paginate.pages > 1 %}{{ paginate | default_pagination }}{% endif %}
+    {% comment %} search results field {% endcomment %}
+    <div class="row row-cols-3 g-2 my-5">
+      {% if search.performed %}
+
+        {% comment %} loop to search results {% endcomment %}
+        {% for item in search.results %}
+
+          {% comment %} flter results to show only products {% endcomment %}
+          {% if item.object_type == 'product' %}
+            <div class="col">
+              <div class="card shadow">
+                {% if item.featured_image %}
+                  <a href="{{ item.url | within: collection }}" title="{{ item.title | escape }}">
+                    {{ item.featured_image.src | img_url: 'medium' | img_tag: item.featured_image.alt, 'card-img-top' }}
+                  </a>
+                {% endif %}
+                  <div class="card-body">
+                    <h5>{{ item.title | link_to: item.url }}</h5>
+                    <p>{{ item.content | strip_html | truncatewords: 50 }}</p>
+                  </div>
+                </div>
+              </div>
+
+          {% comment %} render other category {% endcomment %}
+          {% elsif item.object_type == 'article' %}
+          <div class="col">
+            <div class="card shadow">
+              {% if item.image %}
+                <a href="{{ item.url | within: collection }}" title="{{ item.title | escape }}">
+                  {{ item.image.src | img_url: 'medium' | img_tag: item.image.alt, 'card-img-top' }}
+                </a>
+              {% endif %}
+                <div class="card-body">
+                  <h5>{{ item.title | link_to: item.url }}</h5>
+                  <p>{{ item.content | strip_html | truncatewords: 50 }}</p>
+                </div>
+              </div>
+            </div>
+
+            {% elsif item.object_type == 'page' %}
+            <div class="col">
+              <div class="card shadow">
+                {% if item.image %}
+                  <a href="{{ item.url | within: collection }}" title="{{ item.title | escape }}">
+                    {{ item.image.src | img_url: 'medium' | img_tag: item.image.alt, 'card-img-top' }}
+                  </a>
+                {% endif %}
+                  <div class="card-body">
+                    <h5>{{ item.title | link_to: item.url }}</h5>
+                    <p>{{ item.content | strip_html | truncatewords: 50 }}</p>
+                  </div>
+                </div>
+              </div>
+          {% endif %}
+
+        
+
+        {% endfor %}
+      {% endif %}
+    </div>
+  </div>
+
+  {% comment %} custom pagination {% endcomment %}
+  <div class="row">
+    {% render 'paginate', paginate: paginate %}
+  </div>
+
 {% endpaginate %}
