added and editted sections

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -21,6 +21,7 @@
   </main>
 
   {{ 'bootstrap.min.js' | asset_url | script_tag }}
+  {{ 'application.js' | asset_url | script_tag }}
 
   {% section 'footer' %}
 </body>
