--- a/templates/customers/activate_account.liquid
+++ b/templates/customers/activate_account.liquid
@@ -1,5 +1,45 @@
 <!-- /templates/customers/activate_account.liquid -->
-{% form 'activate_customer_password' %}
+
+<div class="container my-5">
+  <h2 class="lead">Activate Account</h2>
+  <div class="row">
+    {% form 'activate_customer_password' %}
+      {% include 'form-error', form %}
+
+      <div class="col-12">
+        <label for="activate_password1" class="form-label">Password</label>
+        <input class="form-control" type="password" name="customer[password]" id="activate_password1">
+      </div>
+      <div class="col-12">
+        <label for="activate_password2" class="form-label">Password Confirmation</label>
+        <input class="form-control" type="password" name="customer[password_confirmation]" id="activate_password2">
+      </div>
+
+      <div class="col-12">
+        <button 
+          type="submit" 
+          class="btn btn-primary w-100">
+          Activate Account
+        </button>
+      </div>
+
+      <p class="text-center">or</p>
+
+      <div class="col-12">
+        <input 
+          type="submit" 
+          class="btn btn-primary w-100" 
+          name="decline" 
+          value="Decline Invitation"
+        >
+      </div>
+    {% endform %}
+  </div>
+</div>
+
+
+
+{% comment %} {% form 'activate_customer_password' %}
 {{ form.errors | default_errors }}
 <div class="password">
   <label for="password">Password</label>
@@ -14,4 +54,4 @@
   <span>or</span>
   <input type="submit" name="decline" value="Decline Invitation" />
 </div>
-{% endform %}
+{% endform %} {% endcomment %}
