--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -1,39 +1,154 @@
-<!-- /templates/customers/addresses.liquid -->
+<div class="container my-5">
+  <h1 class="lead">My Addresses</h1>
 
-<h2>New Address</h2>
-{% form 'customer_address', customer.new_address %}
+  <button class="btn btn-primary rounded-0" data-bs-toggle="modal" data-bs-target="#newAddressModal">
+    Create new address
+  </button>
+  <div class="row row-cols-md-4 row-cols-1 my-5 gx-2">
+    {% for address in customer.addresses %}
+      <div class="col">
+        <div class="card">
+          <div class="card-body">
+            {{ address | format_address }}
+          </div>
+          <div class="card-footer">
+            <form
+              action="/account/addresses/{{ address.id }}"
+              method="post"
+              data-confirm-message="Delete Address"
+            >
+              <input type="hidden" name="_method" value="delete">
+              <button class="btn btn-danger">Delete</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+</div>
 
-{{ form.errors | default_errors }}
+<div class="modal fade" id="newAddressModal" tabindex="-1" aria-labelledby="newAddressModalLabel" aria-hidden="true">
+  {% form 'customer_address', customer.new_address %}
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="newAddressModalLabel">Add New Address</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="col-12 mb-3">
+            <label for="AddressFirstNameNew" class="form-label">First Name</label>
+            <input
+              id="AddressFirstNameNew"
+              type="text"
+              name="address[first_name]"
+              value="{{ form.first_name }}"
+              class="form-control"
+            >
+          </div>
+          <div class="col-12 mb-3">
+            <label for="AddressLastNameNew" class="form-label">Last Name</label>
+            <input
+              id="AddressLastNameNew"
+              type="text"
+              name="address[last_name]"
+              value="{{ form.last_name }}"
+              class="form-control"
+            >
+          </div>
+          <div class="col-12 mb-3">
+            <label for="AddressCompanyNew" class="form-label">Company</label>
+            <input
+              id="AddressCompanyNew"
+              type="text"
+              name="address[company]"
+              value="{{ form.company }}"
+              class="form-control"
+            >
+          </div>
+          <div class="col-12 mb-3">
+            <label for="AddressAddress1New" class="form-label">Address</label>
+            <input
+              id="AddressAddress1New"
+              type="text"
+              name="address[address1]"
+              value="{{ form.address1 }}"
+              class="form-control"
+            >
+          </div>
+          <div class="col-12 mb-3">
+            <label for="AddressAddress2New" class="form-label">Apartment, Suite, etc</label>
+            <input
+              id="AddressAddress2New"
+              type="text"
+              name="address[address2]"
+              value="{{ form.address2 }}"
+              class="form-control"
+            >
+          </div>
+          <div class="row mb-3">
+            <div class="col-12 col-md-4 mb-3">
+              <label for="AddressCityNew" class="form-label">City</label>
+              <input id="AddressCityNew" type="text" name="address[city]" value="{{ form.city }}" class="form-control">
+            </div>
+            <div class="col-12 col-md-4 mb-3">
+              <label for="AddressCountryNew" class="form-label">Country</label>
+              <select id="AddressCountryNew" name="address[country]" class="form-control">
+                {{ all_country_option_tags }}
+              </select>
+            </div>
+            <div class="col-12 col-md-4 mb-3">
+              <label for="AddressProvinceNew" class="form-label">Province</label>
+              <select
+                id="AddressProvinceNew"
+                name="address[province]"
+                class="form-control"
+                disabled="disabled"
+              ></select>
+            </div>
+          </div>
 
-<label for="first_name">First Name</label>
-<input type="text" value="" name="address[first_name]" size="30" />
+          <div class="col-12 mb-3">
+            <label for="AddressZipNew" class="form-label">Postal/ZIP Code</label>
+            <input id="AddressZipNew" type="text" name="address[zip]" value="{{ form.zip }}" class="form-control">
+          </div>
+          <div class="col-12 mb-3">
+            <label for="AddressPhoneNew" class="form-label">Phone Number</label>
+            <input id="AddressPhoneNew" type="text" name="address[phone]" value="{{ form.phone }}" class="form-control">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">Create Address</button>
+        </div>
+      </div>
+    </div>
+  {% endform %}
+</div>
 
-<label for="last_name">Last Name</label>
-<input type="text" value="" name="address[last_name]" size="30" />
+<script>
+  // Create new address get province script
+  const country = document.getElementById('AddressCountryNew');
+  const province = document.getElementById('AddressProvinceNew');
 
-<label for="company">Company</label>
-<input type="text" value="" name="address[company]" />
+  if (country != null) {
+    country.addEventListener('change', (e) => {
+      let selectedOption = e.target.options[e.target.selectedIndex];
+      let provinces = selectedOption.getAttribute('data-provinces');
+      let provinceArray = JSON.parse(provinces);
 
-<label for="address1">Address 1</label>
-<input type="text" value="" name="address[address1]" />
+      if (provinceArray.length < 1) {
+        province.setAttribute('disabled', 'disabled');
+      } else {
+        province.removeAttribute('disabled');
+      }
 
-<label for="address2">Address 2</label>
-<input type="text" value="" name="address[address2]" />
+      province.innerHTML = '';
+      let options = '';
+      for (let i = 0; i < provinceArray.length; i++) {
+        options += `<option value="${provinceArray[i][0]}">${provinceArray[i][0]}</option>`;
+      }
 
-<label for="city">City</label>
-<input type="text" value="" name="address[city]" />
-
-<!-- See docs for @shopify/theme-addresses to support Country and Province -->
-<label for="country">Country</label>
-<select name="address[country]" /></select>
-
-<label for="province">Province</label>
-<select name="address[province]" /></select>
-
-<label for="zip">Zip/Post Code</label>
-<input type="text" value="" name="address[zip]" />
-
-<label for="phone">Phone Number</label>
-<input type="tel" value="" name="address[phone]" />
-
-{% endform %}
+      province.innerHTML = options;
+    });
+  }
+</script>
