--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -1,3 +1,16 @@
 /* Put your styles in this file. */
 /* Note: "@import" rules aren’t supported. */
 
+.login-form,
+.forgot-form,
+.reg-form {
+  width: 100%;
+  max-width: 360px;
+  margin: 0 auto;
+}
+
+.login-form input,
+.forgot-form input,
+.reg-form input {
+  margin-bottom: 15px;
+}
