--- a/sections/article.liquid
+++ b/sections/article.liquid
@@ -45,20 +45,12 @@
           {% endpaginate %}
         
 
-          {% comment %} commecnt form / comment error {% endcomment %}
+          {% comment %} comment form / comment error {% endcomment %}
           <div>
             {% form 'new_comment', article %}
 
               {% comment %} custom error {% endcomment %}
-              {% for error in form.errors %}
-                <div class="alert alert-danger">
-                  {% if error == 'form' %}
-                    {{ form.errors.messages[error] }}
-                  {% else %}
-                    {{ form.errors.translated_fields[error] }} {{ form.errors.messages[error] }}
-                  {% endif %}
-                </div>
-              {% endfor %}
+              {% render 'form-error', form: form %}
 
 
               {% comment %} comment form {% endcomment %}
