--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -1,5 +1,5 @@
-{% comment %} 
-located in the ...myshopify.com/collections/all
+{% comment %}
+  located in the ...myshopify.com/collections/all
 {% endcomment %}
 
 <div class="container">
@@ -55,22 +55,21 @@ located in the ...myshopify.com/collections/all
   /* for custom styles */
 {% endstyle %}
 
-{% comment %} sorting script {% endcomment %}
 <script>
   Shopify.queryParams = {};
   // Preserve existing query parameters
   if (location.search.length) {
-    var params = location.search.substr(1).split('&');
-    for (var i = 0; i < params.length; i++) {
-      var keyValue = params[i].split('=');
+    let params = location.search.substr(1).split('&');
+    for (let i = 0; i < params.length; i++) {
+      let keyValue = params[i].split('=');
       if (keyValue.length) {
         Shopify.queryParams[decodeURIComponent(keyValue[0])] = decodeURIComponent(keyValue[1]);
       }
     }
   }
   // Update sort_by query parameter on select change
-  document.querySelector('#sort--by').addEventListener('change', function (e) {
-    var value = e.target.value;
+  document.querySelector('#sort--by').addEventListener('change', (e) => {
+    let value = e.target.value;
     Shopify.queryParams.sort_by = value;
     location.search = new URLSearchParams(Shopify.queryParams).toString();
   });
