--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -1,28 +1,35 @@
 <!-- /templates/customers/login.liquid -->
+<div class="container py-5 my-5">
+  <div class="login-form">
+    <h2>Login</h2>
+    {% form 'customer_login' %}
+    
+      {% comment %} error {% endcomment %}
+      {% render 'form-error', form: form %}
+    
+      <label for="customer_email">Email Address</label>
+      <input type="email" name="customer[email]" class="form-control" />
+    
+      <label for="customer_password">Password</label>
+      <input type="password" name="customer[password]" class="form-control" />
+    
+      <input type="submit" value="Sign In" class="btn btn-primary w-100" />
+    
+    {% endform %}
+  </div>
+  
+  <div class="forgot-form">
+    <h2>Forgot Password</h2>
+    {% form 'recover_customer_password' %}
+    
+      {{ form.errors | default_errors }}
+    
+      <label for="customer_email">Email Address</label>
+      <input type="email" name="email" class="form-control" />
+    
+      <input type="submit" value="Submit" class="btn btn-secondary w-100" />
+    
+    {% endform %}
+  </div>
 
-<h2>Login</h2>
-{% form 'customer_login' %}
-
-{{ form.errors | default_errors }}
-
-<label for="customer_email">Email Address</label>
-<input type="email" name="customer[email]" />
-
-<label for="customer_password">Password</label>
-<input type="password" name="customer[password]" />
-
-<input type="submit" value="Sign In" />
-
-{% endform %}
-
-<h2>Forgot Password</h2>
-{% form 'recover_customer_password' %}
-
-{{ form.errors | default_errors }}
-
-<label for="customer_email">Email Address</label>
-<input type="email" name="email" />
-
-<input type="submit" value="Submit" />
-
-{% endform %}
+</div>
